<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crew4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_1"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/zero"
        tools:ignore="MissingConstraints"
        android:rotation="25"/>

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_2"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintLeft_toRightOf="@id/one"
        />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_3"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/comma"
        app:layout_constraintLeft_toRightOf="@id/two"
        android:rotation="25"/>

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_4"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/one"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_5"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/two"
        app:layout_constraintLeft_toRightOf="@id/four"
        android:rotation="25"/>

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_6"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/three"
        app:layout_constraintLeft_toRightOf="@id/five"
        />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_7"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/four"
        tools:ignore="MissingConstraints"
        android:rotation="25"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_8"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintLeft_toRightOf="@id/seven" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_9"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/eight"
        android:rotation="25"/>

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/_0"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/three"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/comma"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toBottomOf="@id/zero"
        app:layout_constraintLeft_toLeftOf="@id/three"
        app:layout_constraintRight_toRightOf="@id/three" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/plus"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/equals"
        app:layout_constraintLeft_toRightOf="@id/three" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/minus"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintLeft_toRightOf="@id/six"
        android:rotation="25"/>

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/multiply"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintLeft_toRightOf="@id/nine" />

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/division"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintLeft_toRightOf="@id/nine"
        android:rotation="25"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/clear"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintLeft_toRightOf="@id/seven"
        android:rotation="25"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/del"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/eight" />

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/equals"
        android:textColor="#f0f8ff"
        android:textSize="@dimen/buttonTextSize"
        app:layout_constraintBottom_toBottomOf="@id/comma"
        app:layout_constraintLeft_toRightOf="@id/comma"
        android:rotation="25"/>

    <Button
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonSize"
        android:backgroundTint="@color/forButton"
        android:text="@string/percent"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="#f0f8ff"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintLeft_toLeftOf="@id/seven"/>


</androidx.constraintlayout.widget.ConstraintLayout>